Fix: Tailwind v4 setup and style issues

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,7 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
-@impport "tailwind/preflight";
-@tailwind utilities;
+@import "tailwindcss";
 
-*{
+* {
   font-family: Outfit;
 }
